--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@actioncrew/ts-test-runner",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "Serve and run your Jasmine specs in a browser",
   "bin": {
     "ts-test-runner": "bin/ts-test-runner"
@@ -64,6 +64,7 @@
     "rollup": "^4.52.3",
     "tinyglobby": "^0.2.15",
     "vite": "^7.1.7",
+    "word-wrap": "^1.2.5",
     "ws": "^8.18.3"
   },
   "devDependencies": {
