--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.1",
+    "eslint-plugin-import": "^2.32.0",
     "@types/express": "^5.0.3",
     "@types/glob": "^9.0.0",
     "@types/istanbul-lib-instrument": "^1.7.8",
