--- a/package.json
+++ b/package.json
@@ -44,56 +44,55 @@
   },
   "homepage": "https://github.com/actioncrew/ts-test-runner#readme",
   "dependencies": {
-    "chokidar": "^4.0.3",
-    "chromium-bidi": "^9.1.0",
-    "esbuild": "^0.25.11",
-    "fdir": "^6.5.0",
-    "glob": "^11.0.3",
-    "istanbul-api": "^2.1.7",
-    "istanbul-lib-coverage": "^3.2.2",
-    "istanbul-lib-instrument": "^6.0.3",
-    "istanbul-lib-report": "^3.0.1",
-    "istanbul-lib-source-maps": "^5.0.6",
-    "istanbul-reports": "^3.2.0",
-    "jasmine-core": "^5.10.0",
-    "module-alias": "^2.2.3",
-    "path-scurry": "^2.0.0",
-    "picomatch": "^4.0.3",
-    "playwright": "^1.55.0",
-    "playwright-core": "^1.55.0",
-    "rollup": "^4.52.3",
-    "tinyglobby": "^0.2.15",
-    "vite": "^7.1.7",
-    "word-wrap": "^1.2.5",
-    "ws": "^8.18.3"
+    "chokidar": "4.0.3",
+    "chromium-bidi": "9.1.0",
+    "esbuild": "0.25.11",
+    "fdir": "6.5.0",
+    "glob": "11.0.3",
+    "istanbul-api": "2.1.7",
+    "istanbul-lib-coverage": "3.2.2",
+    "istanbul-lib-instrument": "6.0.3",
+    "istanbul-lib-report": "3.0.1",
+    "istanbul-lib-source-maps": "5.0.6",
+    "istanbul-reports": "3.2.0",
+    "jasmine-core": "5.10.0",
+    "module-alias": "2.2.3",
+    "path-scurry": "2.0.0",
+    "picomatch": "4.0.3",
+    "playwright": "1.55.0",
+    "playwright-core": "1.55.0",
+    "rollup": "4.52.3",
+    "tinyglobby": "0.2.15",
+    "vite": "7.1.7",
+    "word-wrap": "1.2.5",
+    "ws": "8.18.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
-    "@eslint/js": "^9.39.1",
-    "eslint-plugin-import": "^2.32.0",
-    "@types/express": "^5.0.3",
-    "@types/glob": "^9.0.0",
-    "@types/istanbul-lib-instrument": "^1.7.8",
-    "@types/istanbul-lib-report": "^3.0.3",
-    "@types/istanbul-lib-source-maps": "^4.0.4",
-    "@types/istanbul-reports": "^3.0.4",
-    "@types/jasmine": "^5.1.9",
-    "@types/node": "^24.5.2",
-    "@types/picomatch": "^4.0.2",
-    "@types/ws": "^8.18.1",
-    "copyfiles": "^2.4.1",
-    "esbuild": "^0.25.10",
-    "eslint": "^9.39.1",
-    "eslint-plugin-jasmine": "^4.2.2",
-    "glob": "^11.0.3",
-    "globals": "^16.3.0",
-    "jasmine-core": "^5.10.0",
-    "module-alias": "^2.2.3",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.0.1",
-    "rollup-plugin-copy": "^3.5.0",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7"
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.35.0",
+    "@types/express": "5.0.3",
+    "@types/glob": "9.0.0",
+    "@types/istanbul-lib-instrument": "1.7.8",
+    "@types/istanbul-lib-report": "3.0.3",
+    "@types/istanbul-lib-source-maps": "4.0.4",
+    "@types/istanbul-reports": "3.0.4",
+    "@types/jasmine": "5.1.9",
+    "@types/node": "24.5.2",
+    "@types/picomatch": "4.0.2",
+    "@types/ws": "8.18.1",
+    "copyfiles": "2.4.1",
+    "esbuild": "0.25.10",
+    "eslint": "9.39.1",
+    "eslint-plugin-jasmine": "4.2.2",
+    "glob": "11.0.3",
+    "globals": "16.3.0",
+    "jasmine-core": "5.10.0",
+    "module-alias": "2.2.3",
+    "prettier": "3.6.2",
+    "rimraf": "6.0.1",
+    "rollup-plugin-copy": "3.5.0",
+    "typescript": "5.9.2",
+    "vite": "7.1.7"
   },
   "bundleDependencies": [
     "chokidar",
