--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.35.0",
+    "@types/deasync": "^0.1.5",
     "@types/express": "5.0.3",
     "@types/glob": "9.0.0",
     "@types/istanbul-lib-instrument": "1.7.8",
@@ -91,7 +92,8 @@
     "rimraf": "6.0.1",
     "rollup-plugin-copy": "3.5.0",
     "typescript": "5.9.2",
-    "vite": "7.1.7"
+    "vite": "7.1.7",
+    "deasync": "^0.1.31"
   },
   "bundleDependencies": [
     "chokidar",
