instead of copying dependencies they will be installed in postinstall step

--- a/package.json
+++ b/package.json
@@ -97,19 +97,27 @@
   },
   "bundleDependencies": [
     "chokidar",
+    "chromium-bidi",
     "deasync",
-    "istanbul-lib-instrument",
+    "esbuild",
+    "fdir",
+    "glob",
+    "istanbul-api",
     "istanbul-lib-coverage",
+    "istanbul-lib-instrument",
     "istanbul-lib-report",
     "istanbul-lib-source-maps",
     "istanbul-reports",
-    "istanbul-api",
     "jasmine-core",
-    "glob",
-    "ws",
+    "module-alias",
+    "path-scurry",
+    "picomatch",
+    "playwright",
+    "rollup",
+    "tinyglobby",
     "vite",
-    "fdir",
-    "picomatch"
+    "word-wrap",
+    "ws"
   ],
   "prettier": {
     "singleQuote": true,
