--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.16",
   "description": "Serve and run your Jasmine specs in a browser",
   "bin": {
+    "ts-cli": "bin/ts-cli",
     "ts-test-runner": "bin/ts-test-runner"
   },
   "type": "module",
@@ -20,7 +21,8 @@
     "clean": "rimraf dist",
     "build:cli": "vite build --config vite.cli.config.ts && node build-package.js && npm run copyfiles",
     "build:lib": "vite build --config vite.lib.config.ts",
-    "build": "npm run clean && npm run build:cli && npm run build:lib",
+    "build:runner": "vite build --config vite.runner.config.ts",
+    "build": "npm run clean && npm run build:cli && npm run build:lib && npm run build:runner",
     "start": "node --import tsx ./src/index.ts",
     "copyfiles": "copyfiles README.md LICENSE ./dist/ts-test-runner"
   },
@@ -62,6 +64,7 @@
     "picomatch": "4.0.3",
     "playwright": "1.55.0",
     "rollup": "4.52.3",
+    "ts-node": "^10.9.1",
     "tinyglobby": "0.2.15",
     "vite": "7.1.7",
     "word-wrap": "1.2.5",
@@ -115,6 +118,7 @@
     "picomatch",
     "playwright",
     "rollup",
+    "ts-node",
     "tinyglobby",
     "vite",
     "word-wrap",
