renamed ts-test-runner to testify and updated CLI/loader paths across README and runtime code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@epikodelabs/ts-test-runner",
+  "name": "@epikodelabs/testify",
   "version": "1.0.16",
   "description": "Serve and run your Jasmine specs in a browser",
   "bin": {
