--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actioncrew/testify.git"
+    "url": "git+https://github.com/epikodelabs/testify.git"
   },
   "keywords": [
     "Jasmine",
@@ -44,9 +44,9 @@
   "author": "Oleksii Shepel",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actioncrew/testify/issues"
+    "url": "https://github.com/epikodelabs/testify/issues"
   },
-  "homepage": "https://github.com/actioncrew/testify#readme",
+  "homepage": "https://github.com/epikodelabs/testify#readme",
   "dependencies": {
     "chokidar": "4.0.3",
     "chromium-bidi": "9.1.0",
