--- a/package.json
+++ b/package.json
@@ -48,59 +48,59 @@
   },
   "homepage": "https://github.com/epikodelabs/testify#readme",
   "dependencies": {
-    "chokidar": "4.0.3",
-    "chromium-bidi": "9.1.0",
+    "chokidar": "^5.0.0",
+    "chromium-bidi": "^13.1.1",
     "deasync": "^0.1.31",
-    "esbuild": "0.25.11",
-    "fdir": "6.5.0",
-    "glob": "11.0.3",
-    "istanbul-api": "2.1.7",
-    "istanbul-lib-coverage": "3.2.2",
-    "istanbul-lib-instrument": "6.0.3",
-    "istanbul-lib-report": "3.0.1",
-    "istanbul-lib-source-maps": "5.0.6",
-    "istanbul-reports": "3.2.0",
-    "jasmine-core": "5.10.0",
-    "module-alias": "2.2.3",
-    "path-scurry": "2.0.0",
-    "picomatch": "4.0.3",
-    "playwright": "1.55.0",
-    "rollup": "4.52.3",
-    "tinyglobby": "0.2.15",
-    "ts-node": "^10.9.1",
+    "esbuild": "^0.25.11",
+    "fdir": "^6.5.0",
+    "glob": "^13.0.1",
+    "istanbul-api": "^3.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-instrument": "^6.0.3",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-lib-source-maps": "^5.0.6",
+    "istanbul-reports": "^3.2.0",
+    "jasmine-core": "^6.0.1",
+    "module-alias": "^2.3.4",
+    "path-scurry": "^2.0.1",
+    "picomatch": "^4.0.3",
+    "playwright": "^1.58.2",
+    "rollup": "^4.57.1",
+    "tinyglobby": "^0.2.15",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "vite": "7.1.7",
-    "word-wrap": "1.2.5",
-    "ws": "8.18.3"
+    "vite": "^7.3.1",
+    "word-wrap": "^1.2.5",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.35.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^10.0.1",
     "@types/deasync": "^0.1.5",
-    "@types/express": "5.0.3",
-    "@types/glob": "9.0.0",
-    "@types/istanbul-lib-instrument": "1.7.8",
-    "@types/istanbul-lib-report": "3.0.3",
-    "@types/istanbul-lib-source-maps": "4.0.4",
-    "@types/istanbul-reports": "3.0.4",
-    "@types/jasmine": "5.1.9",
-    "@types/node": "24.5.2",
-    "@types/picomatch": "4.0.2",
-    "@types/ws": "8.18.1",
-    "copyfiles": "2.4.1",
-    "esbuild": "0.25.10",
-    "eslint": "9.35.0",
-    "eslint-plugin-jasmine": "4.2.2",
-    "glob": "11.0.3",
-    "globals": "16.3.0",
-    "jasmine-core": "5.10.0",
-    "minimatch": "^10.1.1",
-    "module-alias": "2.2.3",
-    "prettier": "3.6.2",
-    "rimraf": "^6.0.1",
-    "rollup-plugin-copy": "3.5.0",
-    "typescript": "5.9.2",
-    "vite": "7.1.7"
+    "@types/express": "^5.0.6",
+    "@types/glob": "^9.0.0",
+    "@types/istanbul-lib-instrument": "^1.7.8",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/istanbul-lib-source-maps": "^4.0.4",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/jasmine": "^6.0.0",
+    "@types/node": "^25.2.2",
+    "@types/picomatch": "^4.0.2",
+    "@types/ws": "^8.18.1",
+    "copyfiles": "^2.4.1",
+    "esbuild": "^0.27.3",
+    "eslint": "^10.0.0",
+    "eslint-plugin-jasmine": "^4.2.2",
+    "glob": "^13.0.1",
+    "globals": "^17.3.0",
+    "jasmine-core": "^6.0.1",
+    "minimatch": "^10.1.2",
+    "module-alias": "^2.3.4",
+    "prettier": "^3.8.1",
+    "rimraf": "^6.1.2",
+    "rollup-plugin-copy": "^3.5.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   },
   "bundleDependencies": [
     "chokidar",
